[workspace]
members = [
    "crates/scheduler",
    "crates/worker",
    "crates/gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Smit Dankhra"]
license = "MIT"
description = "Distributed task orchestrator"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tonic-build = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
futures = "0.3"
dashmap = "5"
tokio-stream = "0.1"


